post, getAll and single get
