# src/main/java/com/ecom/blogApi/controller/BlogCategoryController.java
@@ -16,15 +16,14 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.client.ResponseErrorHandler;
 import org.springframework.web.multipart.MultipartFile;
 
 import com.ecom.blogApi.api.model.BlogCategory;
-import com.ecom.blogApi.api.model.BlogCategoryImage;
 import com.ecom.blogApi.service.BlogCategoryService;
 
 @RestController
 @RequestMapping("/blog")
+@CrossOrigin(origins = "*", allowedHeaders = "*")
 public class BlogCategoryController {
    
 	@Autowired
@@ -73,38 +72,41 @@ public class BlogCategoryController {
 		
 	}
 	
-//	@GetMapping(value="/categoryimagebyid/{imageId}")
-//	ResponseEntity<Object> getImageDetailsById(@PathVariable int imageId){
-//		try {
-//			BlogCategoryImage blgImageDetails = blogCategoryService.getAllImageDetails(imageId);
-//		return new ResponseEntity<>(blgImageDetails , HttpStatus.OK);
-//		}catch(Exception ex) {
-//			return ResponseHandler.generateResponseBlogCategoryImage(ex.getMessage(), HttpStatus.NOT_FOUND, null);
-//		}
-//	}
-	
 	@PutMapping(value = "/updateblogcategory/{blogcategoryid}" , consumes = "application/json" , produces = "application/json" )
-	ResponseEntity<Object> putBlogCategory(@PathVariable("blogcategoryid") int id,@RequestBody BlogCategory blogCategory){
-		BlogCategory aa = null;
+	ResponseEntity<Object> putBlogCategory(@PathVariable("blogcategoryid") int id,@RequestBody BlogCategory blogCategoryBody){
+		BlogCategory blogCategory = null;
 		try {
 			
-			aa = blogCategoryService.updateBlogCategory(id, blogCategory);
-			return ResponseHandler.generateResponseBlogCategory("Data is Updated ", HttpStatus.OK, aa);
+			blogCategory = blogCategoryService.updateBlogCategory(id, blogCategoryBody);
+			return ResponseHandler.generateResponseBlogCategory("Data is Updated ", HttpStatus.OK, blogCategory);
 		}
 		catch(Exception ex) {
 			return ResponseHandler.generateResponseBlogCategory(ex.getMessage(),HttpStatus.MULTI_STATUS, null);
 		}
 	}
 	
-	@DeleteMapping(value="/deleteBlogCategory/{blogcategoryid}")
-	ResponseEntity<Object> deleteBlogCategory(@PathVariable("blogcategoryid") int id){
-		
-		BlogCategory db;
+	@PutMapping(value = "/updateimg/{blogcategoryid}")
+	ResponseEntity<Object> putBlogCategoryImage(@PathVariable("blogcategoryid") int id,@RequestParam("categoryName") String categoryName ,@RequestParam("seoTitle") String seoTitle , @RequestParam("seoMetaDesc") String seoMetaDesc,@RequestParam("status") String status,@RequestParam("cateImg") MultipartFile categoryImg ){
+		BlogCategory blgCategory = null;
 		try {
 			
-			db = blogCategoryService.deleteBlogCategory(id);
+			blgCategory = blogCategoryService.updateCategoryImage(id,categoryName,seoTitle, seoMetaDesc ,status, categoryImg );
+			return ResponseHandler.generateResponseBlogCategory("Data is Updated...!", HttpStatus.OK, blgCategory);
+		}
+		catch(Exception ex) {
+			return ResponseHandler.generateResponseBlogCategory(ex.getMessage(),HttpStatus.MULTI_STATUS, null);
+		}
+	}
+	
+	@DeleteMapping(value="/deleteblogcategory/{blogcategoryid}")
+	ResponseEntity<Object> deleteBlogCategory(@PathVariable("blogcategoryid") int id){
+		
+		BlogCategory deleteBlgCategory;
+		try {
 			
-			return ResponseHandler.generateResponseBlogCategory("Successfully deleted data!", HttpStatus.OK, db);
+			deleteBlgCategory = blogCategoryService.deleteBlogCategory(id);
+			
+			return ResponseHandler.generateResponseBlogCategory("Successfully deleted data!", HttpStatus.OK, deleteBlgCategory);
 			
 		}catch(Exception e){
 			
