# src/main/java/com/ecom/blogApi/controller/BlogController.java
@@ -1,0 +1,63 @@
+package com.ecom.blogApi.controller;
+
+import java.util.List;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
+
+import com.ecom.blogApi.api.model.Blog;
+import com.ecom.blogApi.service.BlogService;
+
+@RestController
+public class BlogController {
+	
+	@Autowired
+	BlogService blogService;
+	
+	@GetMapping("/getallblogs")
+	ResponseEntity<Object> getAllBlogCategory (){
+		try {
+			List<Blog> blog = blogService.getAllBlogs();
+			return new ResponseEntity<>(blog ,HttpStatus.OK);
+			
+		}catch(Exception ex) {
+			return ResponseHandler.generateResponseForBlog(ex.getMessage(), HttpStatus.NOT_FOUND, null);
+		}
+		
+	}
+	
+	@PostMapping(value="/addblog")
+	ResponseEntity<Object> postBlogs(@RequestParam("categoryId") int categoryId,@RequestParam("authorName") String authorName ,@RequestParam("blogTitle") String blogTitle ,@RequestParam("description") String description,@RequestParam("seoTitle") String seoTitle,@RequestParam("seoMetaDescription") String seoMetaDescription,@RequestParam("status") String status,@RequestParam("imgData") MultipartFile imgData ,@RequestParam("bannerData") MultipartFile bannerData){
+		try {
+			Blog blog = blogService.createBlog(categoryId,authorName, blogTitle, description, seoTitle, seoMetaDescription, status,imgData ,bannerData);
+			return ResponseHandler.generateResponseForBlog("Sucessfully added data",HttpStatus.CREATED,blog);
+		}catch(Exception ex) {
+			return  ResponseHandler.generateResponseBlogCategory(ex.getMessage(),HttpStatus.MULTI_STATUS,null);
+		}
+	}
+	
+	@GetMapping(value = "/getsingleblog/{blogId}" )
+	ResponseEntity<Object> getBlogById(@PathVariable int blogId) {
+		
+		
+		try {
+			Blog singleBlog = blogService.getSingleBlog(blogId);
+			
+			
+			return new ResponseEntity<>(singleBlog, HttpStatus.OK);
+        } catch (Exception e) {
+        	
+            return ResponseHandler.generateResponseForBlog(e.getMessage(), HttpStatus.NOT_FOUND, null);
+        }
+		
+		
+	}
+	
+}
